--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -38,6 +38,22 @@ jobs:
 
             The following has been parsed from your issue body:
             - The **org name** is set to be: **\`${{ steps.issue-parser.outputs.issueparser_org_name }}\`**
+
+            ## Step 1: Approving the request
+
+            Note that an admin has to approve the request in order to proceed. The Admin should run: 
+
+            \`\`\`
+            /approve
+            \`\`\`
+
+            ## Step 2: Create the org
+
+            Once it has been approved, add comment to this issue in order to create the org:
+          
+            \`\`\`
+            /create-org
+            \`\`\`
             `
 
             await github.rest.issues.createComment({
