--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -17,14 +17,9 @@ jobs:
       contains(github.event.issue.labels.*.name, 'new-org')
 
     steps:
-      - name: Check out scripts
-        uses: actions/checkout@v3
-
-      - name: Print Context
-        uses: actions/github-script@v5
-        with:
-          script: |
-            console.log(context)
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
             
       - uses: stefanbuck/github-issue-parser@v2
         id: issue-parser
