--- a/.github/workflows/create-org.yml
+++ b/.github/workflows/create-org.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: ApproveOps - Approvals in IssueOps
         uses: joshjohanning/approveops@v1
+        id: check-approval
         with:
           app-id: 170284 # The GitHub App ID; ie: 170284
           app-private-key: ${{ secrets.PRIVATE_KEY }} # Private key for the GitHub App that is installed on the repo; e.g.: ${{ secrets.PRIVATE_KEY }}
