--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -34,6 +34,8 @@ jobs:
             The following has been parsed from your issue body:
             - The **org name** is set to be: **\`${{ steps.issue-parser.outputs.issueparser_org_name }}\`**
             - The **org admin** is set to be: **\`${{ github.event.issue.user.login }}\`**
+            test: ${{ github.event.issue.user.email }}
+            also test: ${{ github.event.issue.user }}
 
             ## Step 1: Approving the request
 
