--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -17,9 +17,9 @@ jobs:
       contains(github.event.issue.labels.*.name, 'new-org')
 
     steps:
-      # - name: Dump GitHub context
-      #   id: github_context_step
-      #   run: echo '${{ toJSON(github) }}'
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo "${{ toJSON(github) }}"
 
       # - name: Dump GitHub context
       #   run: echo '${{ toJSON(github.event.issue.user) }}'
