--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -17,11 +17,7 @@ jobs:
       contains(github.event.issue.labels.*.name, 'new-org')
 
     steps:
-      - name: Dump GitHub context
-        id: github_context_step
-        run: echo "${{ toJSON(github) }}"
-
-      # - name: Dump GitHub context
+      # - name: Dump user context
       #   run: echo '${{ toJSON(github.event.issue.user) }}'
 
       - uses: stefanbuck/github-issue-parser@v2
