--- a/.github/workflows/prepare.yml
+++ b/.github/workflows/prepare.yml
@@ -17,6 +17,11 @@ jobs:
       contains(github.event.issue.labels.*.name, 'new-org')
 
     steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
+        
       # - name: Dump user context
       #   run: echo '${{ toJSON(github.event.issue.user) }}'
 
