--- a/.github/workflows/create-org.yml
+++ b/.github/workflows/create-org.yml
@@ -87,11 +87,12 @@ jobs:
             # -f visibility='private'
             
             # set git config
+            echo "setting git config"
             git config --local user.name 'github-actions[bot]'
             git config --local user.email 'github-actions[bot]@users.noreply.github.com'
             
             # init and push readme's
-            mkdir github-repos
+            mkdir github-repos && cd github-repos
             git clone https://github.com/orgs/${{ steps.issue-parser.outputs.issueparser_org_name }}/.github.git
             git clone https://github.com/orgs/${{ steps.issue-parser.outputs.issueparser_org_name }}/.github-private.git
             
