--- a/.github/workflows/create-org.yml
+++ b/.github/workflows/create-org.yml
@@ -93,8 +93,8 @@ jobs:
             
             # init and push readme's
             mkdir github-repos && cd github-repos
-            git clone https://github.com/${{ steps.issue-parser.outputs.issueparser_org_name }}/.github.git
-            git clone https://github.com/${{ steps.issue-parser.outputs.issueparser_org_name }}/.github-private.git
+            git clone https://github-actions:${{ secrets.ADMIN_TOKEN }}@github.com/${{ steps.issue-parser.outputs.issueparser_org_name }}/.github.git
+            git clone https://github-actions:${{ secrets.ADMIN_TOKEN }}@github.com/${{ steps.issue-parser.outputs.issueparser_org_name }}/.github-private.git
             
             mv ./../src/.github/README.md ./.github/README.md
             mv ./../src/.github-private/README.md ./.github-private/README.md
