--- a/.github/workflows/create-org.yml
+++ b/.github/workflows/create-org.yml
@@ -31,6 +31,7 @@ jobs:
           app-private-key: ${{ secrets.PRIVATE_KEY }} # Private key for the GitHub App that is installed on the repo; e.g.: ${{ secrets.PRIVATE_KEY }}
           team-name: approver-team # The name of the team in GitHub to check for the approval command; e.g.: approver-team
           fail-if-approval-not-found: true # Fail the action (show the action run as red) if the command is not found in the comments from someone in the approver team"
+          post-successful-approval-comment: false
           successful-approval-comment: '🚀 great success!'
 
       - uses: stefanbuck/github-issue-parser@v2 
